# sbmpc

./: .gitignore  LICENSE  LICENSE.txt  MUJOCO_LOG.TXT  README-dev.md  README.md  bnn_latest  create_tags_and_build.py  environment-dev.yml  environment.yml  gp_latest  obstacle_loader.py  pyproject.toml  requirements.txt  synth_reg_data.npz  synthreg_sgd_params.pt
examples/: Dockerfile-cuda-jax  aligator_drone_pinochio.py  framed_hopper.py  franka_kinematic_control.py  half_cheetah.py  half_cheetah_pos.py  half_cheetah_vel.py  linear.py  logs_to_metrics.py  metrics.py  mjx_tests.py  mppi_gains_test.py  new_unicycle.py  quadrotor.py  quadrotor_mjx.py  quadrotor_obstacles.py  quadrotor_test_gains.py  swimmer.py  unicycle.py
examples/bitcraze_crazyflie_2/: cf2.xml  obstacles.xml  scene.xml
examples/crazyfly_urdf/: cf2x.urdf
examples/framed_hopper/: framed_hopper copy.xml  framed_hopper.xml
examples/franka_emika_panda/: panda_nohand.xml  scene.xml
examples/half_cheetah/: half_cheetah.xml
examples/swimmer/: swimmer.xml
experiments/: computation_time.txt  plot_stationary_results.py  sample_rejections.txt  stylised_trajectory_planning.py  trajectory_planning_moving.py  trajectory_planning_stationary.py  trajectory_planning_stationary2.py  utils.py
experiments/dissertation/: stylised_trajectory_planning.py  trajectory_planning_moving.py  trajectory_planning_stationary.py  trajectory_planning_stationary2.py
experiments/ecai/: old_trajectory_planning_moving.py  trajectory_planning_complex.py  trajectory_planning_moving (defunct).py  trajectory_planning_moving.py  trajectory_planning_stationary.py
sbmpc/: __init__.py  bnn_model.py  dataset.py  filter.py  gains.py  geometry.py  gp.py  gp_model.py  gp_test.py  hmc.py  model.py  new_model.py  obstacle_loader.py  quadrotor_rollouts.data  sampler.py  sampler_models.py  settings.py  simulation.py  solvers.py  test.txt  training.txt  yacht_hydrodynamics.data
sbmpc/datasets/: dataset_1.data  dataset_2.data  dataset_2.data   dataset_3.data
sbmpc/utils/: filter.py  geometry.py  settings.py  simulation.py
(+64 files in other folders)
