[project]
name = "sbmpc"
authors = [
  { name="Anon", email="" },
]
dynamic = ["version", "dependencies"]
description = "A package to do sampling based trajectory control for robotic applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tombelv/sbmpc"
Issues = "https://github.com/tombelv/sbmpc/issues"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.optional-dependencies]
cuda12_local = ["jax[cuda12_local]"]
cuda12 = ["jax[cuda12]"]